--- a/projects/train/configs/flow/cbc.yaml
+++ b/projects/train/configs/flow/cbc.yaml
@@ -20,19 +20,17 @@ model:
   class_path: train.models.flow.FlowModel
   init_args:
     outdir: ${oc.env:AMPLFI_OUTDIR}
-    # add path below when running `trainer.test` to load in a checkpoint
-    checkpoint: null
     arch:
       class_path: amplfi.architectures.flows.InverseAutoregressiveFlow
       init_args:
         hidden_features: 150
         num_transforms: 80
         num_blocks: 6
-        context_dim: 7
+        context_dim: 8
         # uncomment below to load 
         # in pre-trained embedding weights
-        # embedding_weights: "path/to/embedding/weights"
-        # freeze_embedding: false
+        embedding_weights: "/projects/bcse/saggarwal/binds/checkpoints/last.ckpt"
+        freeze_embedding: false
         embedding_net: 
           class_path: amplfi.architectures.embeddings.ResNet
           init_args:
@@ -43,8 +41,8 @@ model:
                 groups: 8
     patience: null
     save_top_k_models: 10
-    learning_rate: 3.7e-4
-    weight_decay: 0.0
+    learning_rate: 1.0e-3
+    weight_decay: 2.0e-3
 data:
   class_path: train.data.datasets.FlowDataset
   init_args:
@@ -57,9 +55,9 @@ data:
     psd_length: 10
     fftlength: 2
     batches_per_epoch: 200
-    batch_size: 512
+    batch_size: 800
     ifos: ["H1", "L1"]
-    min_valid_duration: 10000.0
+    min_valid_duration: 1000.0
     waveform_sampler: 
       class_path: train.data.waveforms.generator.cbc.FrequencyDomainCBCGenerator
       init_args:
@@ -76,8 +74,8 @@ data:
         phi: 
           class_path: torch.distributions.Uniform
           init_args:
-            low: -3.14
-            high: 3.14
+            low: 0
+            high: 6.28
         num_val_waveforms: 10000
         num_test_waveforms: 100
         approximant: ml4gw.waveforms.IMRPhenomD
