--- a/projects/train/configs/similarity/cbc.yaml
+++ b/projects/train/configs/similarity/cbc.yaml
@@ -11,7 +11,7 @@ trainer:
         save_dir: ${oc.env:AMPLFI_OUTDIR}/train
         project: amplfi
         # uncomment and set to name your run
-        # name: 
+        name: emeddings_1
   max_epochs: 50
   check_val_every_n_epoch: 1
   log_every_n_steps: 20
@@ -20,7 +20,6 @@ model:
   class_path: train.models.SimilarityModel
   init_args:
     outdir: ${oc.env:AMPLFI_OUTDIR}
-    checkpoint: null
     arch:
       class_path: amplfi.architectures.embeddings.ResNet
       init_args:
@@ -32,8 +31,8 @@ model:
             groups: 16
     patience: null
     save_top_k_models: 10
-    learning_rate: 3.77e-4
-    weight_decay: 0.0
+    learning_rate: 7.16e-4
+    weight_decay: 4.42e-4
 data:
   class_path: train.data.datasets.SimilarityDataset
   init_args:
@@ -45,10 +44,10 @@ data:
     fduration: 1
     psd_length: 12
     fftlength: 2
-    batches_per_epoch: 100
+    batches_per_epoch: 150
     batch_size: 256
     ifos: ["H1", "L1"]
-    min_valid_duration: 10000.0
+    min_valid_duration: 1000.0
     augmentor: 
       class_path: train.data.augmentors.TimeTranslator
       init_args:
@@ -69,8 +68,8 @@ data:
         phi: 
           class_path: torch.distributions.Uniform
           init_args:
-            low: -3.14
-            high: 3.14
+            low: 0
+            high: 6.28
         num_val_waveforms: 10000
         num_test_waveforms: 100
         approximant: ml4gw.waveforms.IMRPhenomD
@@ -79,3 +78,4 @@ data:
         padding: 1.0
         waveform_arguments:
           f_ref: 40
+
