--- a/projects/train/pyproject.toml
+++ b/projects/train/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12" #^3.8,<3.12"
+numpy = "<2.0.0"
 lightning = "^2.2.1"
 ml4gw = ">=0.4"
 h5py = "^3.10.0"
