--- a/projects/train/pyproject.toml
+++ b/projects/train/pyproject.toml
@@ -20,6 +20,8 @@ wandb = "^0.16.3"
 
 "amplfi.architectures" = {path = "../../amplfi/architectures", develop = true}
 omegaconf = "^2.3.0"
+lightray = "0.1.3"
+
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
