--- a/projects/train/pyproject.toml
+++ b/projects/train/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "train"
 version = "0.1.0"
-description = "Train PE models with pytorch lightning"
+description = "Train AMPLFI models with PyTorch Lightning"
 authors = ["Deep Chatterjee, Ethan Marx"]
 license = "MIT"
 
@@ -9,7 +9,7 @@ license = "MIT"
 python = ">=3.9,<3.12" #^3.8,<3.12"
 numpy = "<2.0.0"
 lightning = "<=2.2.1"
-ml4gw = ">=0.4"
+ml4gw = "^0.5"
 h5py = "^3.10.0"
 ray = "^2.9.3"
 bilby = "^2.2.3"
