--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,23 @@
+[tool.poetry]
+name = "amplfi"
+version = "0.0.1"
+description = "End-to-end amplfi pipeline components"
+authors = [
+    "Ethan Marx",
+    "Deep Chatterjee"
+]
+
+[tool.poetry.dependencies]
+python = ">=3.9,<3.11"
+jsonargparse = "^4.27.1"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.7.0"
+
+[tool.poetry.scripts]
+amplfi-init = "scripts.amplfi_init:main"
+
+
 [tool.black]
 line-length = 79
 include = '\.pyi?$'
