change log mode to info

--- a/amplfi/law/datagen.cfg
+++ b/amplfi/law/datagen.cfg
@@ -44,7 +44,7 @@ request_disk = 1024KB
 request_cpus = 1
 
 [logging]
-law.sandbox.base: DEBUG 
+law.sandbox.base: INFO 
 law: INFO
 luigi: INFO
-law.workflow.base: DEBUG
+law.workflow.base: INFO
