--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,6 +11,16 @@ build:
   tools:
     python: "3.12"
 
+  jobs:
+    post_create_environment:
+      # Install poetry
+      - pip install poetry
+      # Tell poetry to not use a virtual environment
+      - poetry config virtualenvs.create false
+    post_install:
+      # Install dependencies
+      - poetry install --with docs
+
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
