--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,7 +19,8 @@ build:
       - poetry config virtualenvs.create false
     post_install:
       # Install dependencies
-      - poetry install --with docs
+      - poetry install -vvv --with docs
+      - which python
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
