update docs deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Sphinx = ">5.0"
 sphinx-rtd-theme = "^2.0.0"
 myst-parser = "^2.0.0"
 sphinx-autodoc-typehints = "^2.0.0"
+linkify-it-py = "^2.0.3"
 
 [tool.poetry.scripts]
 amplfi-init = "scripts.amplfi_init:main"
