--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 python = ">=3.9,<3.13"
 jsonargparse = "^4.27.1"
 "amplfi.law" = {path = "./amplfi/law", develop = true}
+"train" = {path = "./projects/train", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
