--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,19 @@ authors = [
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 jsonargparse = "^4.27.1"
+"amplfi.law" = {path = "./amplfi/law", develop = true}
+"train" = {path = "./projects/train", develop = true}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
+
+
+[tool.poetry.group.docs.dependencies]
+Sphinx = ">5.0"
+sphinx-rtd-theme = "^2.0.0"
+myst-parser = "^2.0.0"
+sphinx-autodoc-typehints = "^2.0.0"
+linkify-it-py = "^2.0.3"
 
 [tool.poetry.scripts]
 amplfi-init = "scripts.amplfi_init:main"
