--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,46 +12,23 @@ on:
     branches:
       - main
 
-# TODO: currently combining path for nvidia variables 
-# necessary to launch triton in export container
-# with path required by train / data projects. 
-# Should add conditionals in this workflow to set these dynamically
 env:
   REGISTRY: ghcr.io
   PATH: /opt/env/bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/cuda-11.8/bin
 
 
 jobs:
-  changes:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      projects: ${{ steps.filter.outputs.changes }}
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Filter project changes
-      id: filter 
-      uses: dorny/paths-filter@v2
-      with:
-        filters: .github/project-filters.yaml
-      if: github.event.pull_request.draft == false
-
-  build-test:
-    runs-on: ubuntu-latest
-    needs: changes
     permissions:
       contents: read
       packages: write
-    strategy:
-      fail-fast: false
-      matrix:
-        project: ${{ fromJSON(needs.changes.outputs.projects) }}
-        exclude:
-          - project: 'workflow' # Fixed the exclusion key
     steps:
     -
-      name: delete huge unnecessary tools folder
-      run: rm -rf /opt/hostedtoolcache 
+      name: Free Disk Space (Ubuntu)
+      uses: jlumbroso/free-disk-space@main
+      with:
+        tool-cache: false
     -
       name: Checkout repository
       uses: actions/checkout@v4
@@ -77,7 +54,7 @@ jobs:
         docker run \
           --rm \
           -v ${{ github.workspace }}:/opt/amplfi \
-          --workdir /opt/amplfi/projects/${{ matrix.project }} \
+          --workdir /opt/amplfi/ \
           --privileged \
           --entrypoint /bin/bash \
           quay.io/singularity/singularity:v3.8.1 \
@@ -93,7 +70,7 @@ jobs:
       # building containers for PRs
       if: ${{ github.event_name == 'push' }}
       env:
-        tag: ${{ env.REGISTRY }}/${{ github.repository }}/${{ matrix.project }}:${{ github.ref_name }}
+        tag: ${{ env.REGISTRY }}/${{ github.repository }}/amplfi:${{ github.ref_name }}
       run: |
         export TAG_LC=${tag,,}
         cat app.tar.gz | docker import --change "ENV PATH=${{ env.PATH }}" - $TAG_LC
