get law datagen working

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,6 @@ authors = [
     "Ethan Marx",
     "Deep Chatterjee"
 ]
-packages = [ 
-    { include = "amplfi" },
-]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
@@ -28,11 +25,13 @@ lightray = "^0.1.5"
 law = {git = "https://github.com/riga/law.git", branch = "master"}
 mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "law-overhaul"}
 luigi = "^3.5.1"
+gwpy = "3.0.8"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
 jupyter = "^1.0.0"
 pytest = "^8.0.2"
+conda-lock = "^2.5.7"
 
 
 
@@ -66,3 +65,7 @@ exclude = '''
 known_first_party = ["amplfi"]
 multi_line_output = 3
 include_trailing_comma = true
+
+[build-system]
+requires = ["poetry"]
+build-backend = "poetry.masonry.api"
