--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -25,9 +25,9 @@ jobs:
         with:
           submodules: recursive
 
-      - name: build and run tests
+      - name: run tests
         run: |
-            python -m pip install --upgrade pip∂
+            python -m pip install --upgrade pip
             poetry install 
             poetry run pytest -v
         shell: bash
