--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -28,6 +28,9 @@ jobs:
 
       - name: run tests
         run: |
+            apt-get update
+            apt-get install -y build-essential
+            apt-get clean
             python -m pip install --upgrade pip
             python -m pip install poetry
             poetry install 
