--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ lightray = "^0.1.5"
 law = {git = "https://github.com/riga/law.git", branch = "master"}
 mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "law-overhaul"}
 luigi = "^3.5.1"
-
+gwpy="3.0.8"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
