--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ sphinx-rtd-theme = "^2.0.0"
 myst-parser = "^2.0.0"
 sphinx-autodoc-typehints = "^2.0.0"
 linkify-it-py = "^2.0.3"
+sphinx-tabs = "^3.4.7"
 
 [tool.poetry.scripts]
 amplfi-init = "amplfi.amplfi_init:main"
