--- a/amplfi/train/configs/flow/sg.yaml
+++ b/amplfi/train/configs/flow/sg.yaml
@@ -17,11 +17,11 @@ trainer:
   log_every_n_steps: 20
   benchmark: false
 model:
-  class_path: train.models.flow.FlowModel
+  class_path: amplfi.train.models.flow.FlowModel
   init_args:
     outdir: ${oc.env:AMPLFI_OUTDIR}
     arch:
-      class_path: amplfi.architectures.flows.InverseAutoregressiveFlow
+      class_path: amplfi.train.architectures.flows.InverseAutoregressiveFlow
       init_args:
         hidden_features: 150
         num_transforms: 80
@@ -32,7 +32,7 @@ model:
         # embedding_weights: "path/to/embedding/weights"
         # freeze_embedding: false
         embedding_net: 
-          class_path: amplfi.architectures.embeddings.ResNet
+          class_path: amplfi.train.architectures.embeddings.ResNet
           init_args:
             layers: [5, 3, 3]
             norm_layer:
@@ -44,7 +44,7 @@ model:
     learning_rate: 3.77e-4
     weight_decay: 0.0
 data:
-  class_path: train.data.datasets.FlowDataset
+  class_path: amplfi.train.data.datasets.FlowDataset
   init_args:
     data_dir: ${oc.env:AMPLFI_DATADIR}
     inference_params: ["frequency", "quality", "hrss", "phase",  "eccentricity", "dec", "psi", "phi"]
@@ -59,12 +59,12 @@ data:
     ifos: ["H1", "L1"]
     min_valid_duration: 10000.0
     waveform_sampler: 
-      class_path: train.data.waveforms.generator.sg.SGGenerator
+      class_path: amplfi.train.data.waveforms.generator.sg.SGGenerator
       init_args:
         num_fit_params: 100000
         num_test_waveforms: 1000
-        parameter_transformer: train.priors.sg_transformer
-        parameter_sampler: train.priors.sg_prior
+        parameter_transformer: amplfi.train.priors.sg_transformer
+        parameter_sampler: amplfi.train.priors.sg_prior
         dec: 
           class_path: ml4gw.distributions.Cosine
         psi: 
