--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ numpy = "<2.0.0"
 lightning = "<=2.2.1"
 ml4gw = "^0.5"
 h5py = "^3.10.0"
-ray = "^2.9.3"
+ray = {version = "^2.9.3", extras = ["default", "tune"]}
 bilby = "^2.2.3"
 healpy = "^1.16.6"
 pyro-ppl = "^1.9.0"
