install amplfi editably so that code can be bind mounted

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,5 +68,5 @@ multi_line_output = 3
 include_trailing_comma = true
 
 [build-system]
-requires = ["poetry"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
