--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ urllib3 = ">=1.25.4,<1.27"
 omegaconf = "^2.3.0"
 lightray = "^0.1.5"
 law = ">=0.1.19"
-mldatafind = {git = "https://github.com/ML4GW/mldatafind.git", branch = "law-overhaul"}
+mldatafind = ">=0.1.0"
 luigi = "^3.5.1"
 gwpy="3.0.8"
 
@@ -32,7 +32,6 @@ pre-commit = "^3.7.0"
 jupyter = "^1.0.0"
 pytest = "^8.0.2"
 conda-lock = "^2.5.7"
-
 
 
 [tool.poetry.group.docs.dependencies]
