add scheduler patience and factor as arguments of the model

--- a/amplfi/train/configs/similarity/cbc.yaml
+++ b/amplfi/train/configs/similarity/cbc.yaml
@@ -30,7 +30,8 @@ model:
           class_path: ml4gw.nn.norm.GroupNorm1DGetter
           init_args:
             groups: 16
-    patience: null
+    patience: 10
+    factor: 0.1
     save_top_k_models: 10
     learning_rate: 3.77e-4
     weight_decay: 0.0
