--- a/amplfi/train/configs/flow/cbc.yaml
+++ b/amplfi/train/configs/flow/cbc.yaml
@@ -41,7 +41,8 @@ model:
               class_path: ml4gw.nn.norm.GroupNorm1DGetter
               init_args:
                 groups: 8
-    patience: null
+    patience: 10
+    factor: 0.1
     save_top_k_models: 10
     learning_rate: 3.7e-4
     weight_decay: 0.0
