--- a/amplfi/train/configs/similarity/cbc.yaml
+++ b/amplfi/train/configs/similarity/cbc.yaml
@@ -16,6 +16,17 @@ trainer:
   check_val_every_n_epoch: 1
   log_every_n_steps: 20
   benchmark: false
+  callbacks:
+      - class_path: amplfi.train.callbacks.ModelCheckpoint
+        init_args:
+          monitor: "valid_loss"
+          save_top_k: 5
+          save_last: true
+          auto_insert_metric_name : false
+          mode: "min"
+      - class_path: lightning.pytorch.callbacks.LearningRateMonitor
+        init_args:
+          logging_interval: epoch
 model:
   class_path: amplfi.train.models.SimilarityModel
   init_args:
@@ -32,7 +43,6 @@ model:
             groups: 16
     patience: 10
     factor: 0.1
-    save_top_k_models: 10
     learning_rate: 3.77e-4
     weight_decay: 0.0
 data:
