--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,14 @@ bilby = "^2.2.3"
 healpy = "^1.16.6"
 pyro-ppl = "^1.9.0"
 jsonargparse = {version = "^4.27.1", extras = ["signatures"]}
-wandb = "^0.16.3"
 urllib3 = ">=1.25.4,<1.27"
 omegaconf = "^2.3.0"
-lightray = "^0.1.5"
+lightray = {git = "https://github.com/EthanMarx/lightray.git", branch = "refactor"}
 law = ">=0.1.19"
 mldatafind = ">=0.1.0"
 luigi = "^3.5.1"
 gwpy="3.0.8"
+wandb = "^0.18.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
