parse outdir from env var

--- a/amplfi/train/configs/tune.yaml
+++ b/amplfi/train/configs/tune.yaml
@@ -18,7 +18,7 @@ tune_config:
 # ray.train.RunConfig
 run_config:
   name: "my-first-run"
-  storage_path: s3://path/to/bucket
+  storage_path: ${oc.env:AMPLFI_OUTDIR}
   failure_config:
     class_path: ray.train.FailureConfig
     init_args:
