--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,19 +13,19 @@ numpy = "<2.0.0"
 lightning = "<=2.2.1"
 ml4gw = "^0.5"
 h5py = "^3.10.0"
-ray = {version = "^2.9.3", extras = ["default", "tune"]}
+ray = {version = "^2.38.0", extras = ["default", "tune"]}
 bilby = "^2.2.3"
 healpy = "^1.16.6"
 pyro-ppl = "^1.9.0"
 jsonargparse = {version = "^4.27.1", extras = ["signatures"]}
-wandb = "^0.16.3"
 urllib3 = ">=1.25.4,<1.27"
 omegaconf = "^2.3.0"
-lightray = "^0.1.5"
+lightray = ">=0.2.3"
 law = ">=0.1.19"
-mldatafind = ">=0.1.0"
+mldatafind = ">=0.1.2"
 luigi = "^3.5.1"
 gwpy="3.0.8"
+wandb = "^0.18.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
@@ -44,7 +44,6 @@ sphinx-tabs = "^3.4.7"
 
 [tool.poetry.scripts]
 amplfi-init = "amplfi.amplfi_init:main"
-amplfi-tune = "amplfi.tune.tune:main"
 amplfi-flow-cli = "amplfi.train.cli.flow:main"
 amplfi-similarity-cli = "amplfi.train.cli.similarity:main"
 
