--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,8 @@ repos:
     hooks:
     - id: end-of-file-fixer
     - id: check-yaml
+      args:
+      - "--allow-multiple-documents"
 -   repo: https://github.com/pycqa/flake8
     rev: 3.9.2
     hooks:
