--- a/amplfi/train/configs/similarity/cbc.yaml
+++ b/amplfi/train/configs/similarity/cbc.yaml
@@ -16,6 +16,17 @@ trainer:
   check_val_every_n_epoch: 1
   log_every_n_steps: 50
   benchmark: false
+  callbacks:
+    - class_path: amplfi.train.callbacks.ModelCheckpoint
+      init_args:
+        monitor: "valid_loss"
+        save_top_k: 5
+        save_last: true
+        auto_insert_metric_name : false
+        mode: "min"
+    - class_path: lightning.pytorch.callbacks.LearningRateMonitor
+      init_args:
+        logging_interval: epoch
 model:
   class_path: amplfi.train.models.SimilarityModel
   init_args:
@@ -87,5 +98,5 @@ data:
     augmentor: 
       class_path: amplfi.train.data.augmentors.TimeTranslator
       init_args:
-        jitter: 0.5
+        jitter: 0.1
         sample_rate: 2048
