create fits files using UNIQ ordering scheme
* density estimate sky coordinates using adaptive UNIQ
  ordering similar to bayestar
* marginalize other parameters by sampling other parameters
  from a flat prior
* add astropy-healpix and mhealpy to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ mldatafind = ">=0.1.3"
 luigi = "^3.5.1"
 gwpy="3.0.8"
 wandb = "^0.18.5"
+astropy-healpix = "^1.0.3"
+mhealpy = "^0.3.4"
 
 
 [tool.poetry.group.dev.dependencies]
