--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ mldatafind = ">=0.1.3"
 luigi = "^3.5.1"
 gwpy="3.0.8"
 wandb = "^0.18.5"
-
+torch = "<2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
