--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 python = ">=3.9,<3.13"
 numpy = "<2.0.0"
 lightning = "<=2.2.1"
-ml4gw = "<=0.6.1"
+ml4gw = ">=0.6.3,<=0.7.0"
 h5py = "^3.10.0"
 ray = {version = "^2.38.0", extras = ["default", "tune"]}
 bilby = "^2.2.3"
@@ -26,7 +26,7 @@ mldatafind = ">=0.1.3"
 luigi = "^3.5.1"
 gwpy="3.0.8"
 wandb = "^0.18.5"
-
+torch = "<2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.0"
