add trailing commas (COM812)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev = [
     "jupyter>=1.0.0,<2",
     "pytest>=8.0.2,<9",
     "conda-lock>=2.5.7,<3",
+    "ruff>=0.9.6",
 ]
 docs = [
     "Sphinx>5.0",
@@ -73,7 +74,25 @@ exclude = '''
 )/
 '''
 
-[tool.isort]
-known_first_party = ["amplfi"]
-multi_line_output = 3
-include_trailing_comma = true
+
+
+
+
+[tool.ruff]
+line-length = 79
+
+
+[tool.ruff.lint]
+mccabe = {"max-complexity" = 18}
+select = ["B", "C", "E", "F", "W",  "B9"]
+ignore = ["W605", "E203"]  # ignore for consistency with black
+
+# ignore asterisk imports and unused
+# import errors in __init__ files
+per-file-ignores =  {"**/__init__.py" = ["F401", "F403"]}
+
+
+[tool.ruff.lint.isort]
+known-first-party = ["amplfi"]
+# multi-line-output = 3
+# include-trailing-comma = true
