--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,12 @@ repos:
       args:
       - "--allow-multiple-documents"
 
+- repo: https://github.com/astral-sh/uv-pre-commit
+  # uv version.
+  rev: 0.6.0
+  hooks:
+    - id: uv-lock
+
 - repo: https://github.com/dhruvmanila/remove-print-statements
   rev: v0.5.2  
   hooks:
