--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,25 +61,11 @@ default-groups = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.black]
-line-length = 79
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.git
-  | \.tox
-  | _build
-  | dist
-  | docs
-)/
-'''
-
-
-
 
 
 [tool.ruff]
 line-length = 79
+extend-exclude = ["docs"]
 
 
 [tool.ruff.lint]
