use uv for tests

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -38,3 +38,4 @@ jobs:
             apt-get install -y build-essential
             apt-get clean
             uv run pytest tests
+        shell: bash
