--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -22,17 +22,20 @@ jobs:
       volumes:
         - ${{ github.workspace }}:/github/workspace
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      - name: run tests
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Install the project
         run: |
             apt-get update
             apt-get install -y build-essential
             apt-get clean
-            python -m pip install --upgrade pip
-            python -m pip install poetry
-            poetry install 
-            poetry run pytest -v
-        shell: bash
+            uv sync --all-extras --dev
+            
+      - name: Run tests
+        run: |
+            uv run pytest tests
