--- a/amplfi/train/configs/flow/cbc.yaml
+++ b/amplfi/train/configs/flow/cbc.yaml
@@ -85,16 +85,20 @@ data:
           class_path: amplfi.train.priors.cbc_prior
         dec: 
           class_path: ml4gw.distributions.Cosine
+          init_arg:
+            validate_args: false
         psi: 
           class_path: torch.distributions.Uniform
           init_args:
             low: 0
-            high: 3.14 
+            high: 3.14159
+            validate_args: false
         phi: 
           class_path: torch.distributions.Uniform
           init_args:
             low: 0
-            high: 6.28
+            high: 6.28318
+            validate_args: false
         num_val_waveforms: 10000
         num_test_waveforms: 200
         approximant: ml4gw.waveforms.IMRPhenomD
